--- a/_posts/2019-01-07-2018这一年.md
+++ b/_posts/2019-01-07-2018这一年.md
@@ -6,29 +6,29 @@ tags: [杂文]
 
 2018年已经过去一周了，一直想找个机会来回顾过往这一年发生的人和事。刚从国内回来，趁着还未倒好的时差和清醒的头脑，写写今年的感悟吧！
 
-2018，也许对我来说是个人生转变。总结来说，经历了三个学位紧张的毕业，两个长篇的答辩论文和答辩展示的准备，再到刷题学习机器/深度学习/kaggle竞赛的前期投入，面试一次次的失败和最后拿到offer的喜悦，最后就是刚入职的紧张，不安，和兴奋。别人看似光鲜的履历下，对于我，无不透着光明与黑暗。
+2018，也许对我来说是个人生转变。总结来说，经历了三个学位紧张的毕业，两个长篇答辩论文和答辩展示的准备，再到刷题学习机器/深度学习/kaggle竞赛的前期投入，面试一次次的失败和最后拿到offer的喜悦，最后就是刚入职后带来的紧张，不安，和兴奋。别人看似光鲜的履历下，对于我，无不透着光明与黑暗。
 
 事情不论大小，一件件来道道。
 
 - 博士的经历
 
-算上今天，已经入职整整五个月了，对待工作从不敢发声到渐渐熟悉甚至觉得更加喜欢投入。老生常谈来说，我的背景并不是计算机行业，所学的知识也是近两年疯狂塞进我的头脑。现在会看来说，博士的那一段经历还是培养了我很多好的习惯和训练素养。
+算上今天，已经入职整整五个月了，对待工作从不敢发声到渐渐熟悉甚至觉得更加喜欢投入。老生常谈来说，我的背景并不是计算机行业，所学的知识也是近两年疯狂塞进我的头脑。现在回头看来说，博士的那一段经历还是培养了我很多好的习惯和训练素养。
 
     * 学习能力的重要性
 
 我现在在的组，平时工作需要大量自然语言处理和知识图谱的理论。没有入职前，仅仅是跟过几个kaggle项目，看过网上火热的博客，大概对自然语言处理有初步了解。所学的知识可谓是星星点点，不成体系。这一段时间来，首先看了自然语言统计的基础书，在这里感谢我的同事Iris的推荐。她在工作和生活上的乐观和投入，给了我这个新人很好的榜样。
 
-接下来是组里的paper review小组，一开始我了解机器学习翻译，完全是一头雾水。渐渐地，从一个个python的包开始运行别人的例子，到实践一些内部的数据，还有参与和同事讨论，这一些都让我不大害怕触碰这些，相信自己再坚持积累一段时间，可以把工作整理得更好。同样，我要大大感谢我的经理Jiaqi, 导师Lin，同事Xiao和Jason同学。
+接下来是组里的paper review小组，一开始我了解机器学习翻译，完全是一头雾水。渐渐地，从一个个python的包开始运行别人的例子，到实践一些内部的数据，还有参与和同事讨论，这一些都让我不大害怕触碰这些，相信自己再坚持积累一段时间，可以把工作整理得更好。同样，我要大大感谢我的经理Jiaqi, 同事Lin，Xiao和Jason同学。
 
     * 项目合作的沟通和考量
 
-博士期间经历一段痛苦而又漫长的合作经历。即便是今天，我至今还有心理阴影。导师和合作者的压力，最后都没有把整个项目引导一个很好的方向。有的时候，大家争名夺利，敷衍了事，回首看来都是这个项目太长，人心散了，说什么都于事无补。我不得不承认，年少轻狂，有的时候没有照顾合作者的感受，一心只想推动整个项目的发展。这段经历让我认识到，合作项目的顺利进行，同样提托于自身的努力，考量合作方的厉害，知道别人的痛点予以帮助和沟通，还有赖于和管理人员及时汇报。
+博士期间经历一段痛苦而又漫长的合作经历。即便是今天，我至今仍有心理阴影。导师和合作者的各方压力，最后都没有把整个项目引导一个很好的方向。有的时候，大家争名夺利，敷衍了事，回首看来都是这个项目太长，人心散了，说什么都于事无补。我不得不承认，年少轻狂，有的时候没有照顾合作者的感受，一心只想推动整个项目的发展。这段经历让我认识到，合作项目的顺利进行，同样提托于自身的努力，考量合作方的利害，知道别人的痛点予以帮助和沟通，还有赖于和管理人员及时汇报。
 
-不过，学术界的科研资金压力往往要比业界大很多。好在这五年的合作项目，文章也顺利发表了，算是对得起自己大量测试和往返于国家实验室制造器件。想想这段经历里给自己设置障碍的科研工作者们，我要感谢你们磨炼我的意志。
+不过，学术界由于科研资金带来的压力往往要比业界大很多。好在这五年的合作项目，文章也顺利发表了，算是对得起自己花时间做了大量测试和往返于国家实验室制造器件。想想这段经历里给自己设置障碍的科研工作者们，我要感谢你们磨炼我的意志。
 
     * 整理工作和表达展示
 
-博士的最后一年大部分在上统计硕士的课和整理之前的工作把文章发表出来。但是，在前五年，几乎每周都会整理组会报告，画图分析实验数据。在这一点上，我要感谢我的导师，用有点不近人情近乎变态的方式，让我一次次的重新打磨自己的整理工作。所以，在整理上，周而复始的PPT和文档记录的积累，如今给工作带了很多便利，也为项目合作的沟通便利不少。还有一点，也是最重要的，就是如何展示自己的所完成的任务。目前来说，工作还在积累，并没有太多的展示机会。不过读书期间，我尤其感谢在生统学习和接触这两年。这也许是改变我从一个科研工作者到业界的最大转变。统计的学习，大部分情况下理论学习不难，但是解释却尤为重要。尤其是把自己所掌握的传达给非技术人员。
+博士的最后一年大部分时间都花在上统计硕士的课和整理之前的工作然后把文章发表出来。但是，在前五年，几乎每周都会整理组会报告，画图分析实验数据。在这一点上，我要感谢我的导师，用有点不近人情近乎变态的方式，让我一次次的重新打磨自己的整理工作。所以，在整理上，周而复始的PPT和文档记录的积累，如今给工作带了很多便利，也为项目合作的沟通便利不少。还有一点，也是最重要的，就是如何展示自己所完成的任务。目前来说，工作还在不断地学习和积累，并没有得到太多的展示机会。不过读书期间，我尤其感谢在生统学习和接触这两年。这也许是改变我从一个科研工作者到业界的最大转变。统计的学习，大部分情况下理论学习不难，但是解释却尤为重要。尤其是把自己所掌握的传达给非技术人员。
 
 让我意识到，让大部分人熟知自己的工作，扩大自己的visibility和知名度，往往比理论知识的学习难上加难。和美国同学的竞争，让我看到了表达上的差距，却也激发了我练好口语，下足功夫做好展示。我想我最后的物理博士和统计硕士答辩，都要比任何一次去开物理材料会议的演讲要好得多。总之，这一块我仍需努力学习。
 
@@ -38,7 +38,7 @@ tags: [杂文]
 
 还有一点感悟，找工作真的是一个努力回报的过程，一个积累知识和运气的搏斗场。你永远不知道哪一天随时好运降临，也不明白意外的发生。所以，保持一个move on的心态，永远没错！
 
-找到工作，我要感谢的是计算机娄博士，我的kaggle团队（大部分物理化学数学博士们）和高中好友物理刘博士。
+找到工作，我要感谢的是计算机娄博士，kaggle团队（大部分物理化学数学博士们），和我一起准备面试的化工张博士，Jen同学，以及高中大学好友物理刘博士。
 
 - 运动
 
