--- a/_posts/2019-01-07-2018这一年.md
+++ b/_posts/2019-01-07-2018这一年.md
@@ -8,7 +8,7 @@ tags: [杂文]
 
 2018，也许对我来说是个人生转变。总结来说，经历了三个学位紧张的毕业，两个长篇答辩论文和答辩展示的准备，再到刷题学习机器/深度学习/kaggle竞赛的前期投入，面试一次次的失败和最后拿到offer的喜悦，最后就是刚入职后带来的紧张，不安，和兴奋。别人看似光鲜的履历下，对于我，无不透着光明与黑暗。
 
-![table of content]({{ "/assets/img/upanddown.png"}})
+![table of content]({{"/assets/img/upanddown.png"#center}})
 
 事情不论大小，一件件来道道。
 
